# gould

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  Release  aclocal.m4  autogen.sh  config.h.in  configure.ac  libgould.pc.in
data/: Makefile.am  depot.xml  desktop.xml  gould.conf  gould.conf.in  gould.pam  gould.sh  panel.xml  wbar.conf  xscreensaver
data/openbox/: menu.xml
data/themes/abstract/: greeter.ui  gtkrc
data/themes/default/: greeter.ui  gtkrc  index.theme
po/: Makefile.in.in  POTFILES.in  de.po  es.po  fr.po  id.po  it.po  ja.po
src/: Makefile.am
src/common/: Makefile.am  config.h  diagnostics.c  dialog.c  dialog.h  docklet.c  docklet.h  filechooser.c  filechooser.h  gould.h  grabber.c  grabber.h  green.c  green.h  greenwindow.c  greenwindow.h  gtk3compat.c  gwindow.c  gwindow.h  iconbox.c  iconbox.h  jpeg2pdf.c  jpeg2pdf.h  module.c  module.h  pager.c  pager.h  print.c  print.h  sha1.c  sha1.h  systray.c  systray.h  tasklist.c  tasklist.h  util.c  util.h  window.c  xmlconfig.c  xmlconfig.h  (+4 more)
src/common/icons/: apply.xpm  audio.xpm  back.xpm  blank.xpm  broken.xpm  bulb.xpm  camera.xpm  cancel.xpm  chooser.xpm  close.xpm  cut.xpm  delete.xpm  dirs.xpm  done.xpm  down.xpm  eclipse.xpm  error.xpm  exec.xpm  exit.xpm  expand.xpm  file.xpm  folder.xpm  forward.xpm  genesis.xpm  hardisk.xpm  help.xpm  hidden.xpm  home.xpm  icons.xpm  image.xpm  info.xpm  item.xpm  java.xpm  lock.xpm  logo.xpm  logout.xpm  maximize.xpm  menu.xpm  minimize.xpm  open.xpm  (+35 more)
src/core/: generations  hwsetup  redpill.c  redpill.sh  usb-reset.c  usb-reset.sh  usbscan
src/core/X11/: Xresources  nvidia-340xx.sh  startx  xname  xsetbg
src/core/X11/xinit/: Xclients  xinitrc  xsession
src/core/X11/xorg.conf.d/: 02-serverflags.conf
src/desktop/: Makefile.am  desktop.c  dialog.c  gcommand.c  gcontrol.c  gpanel.c  gpanel.h  gpanel.mk  gresources.xml  gscreen.c  gscreen.h  gsession  gsession.c  gsession.h  gsession.mk  gtaskbar.c  menu.c  menus.c  prova.c  saver.c  screensaver.c  screensaver.h  setting.c  settings.c  taskbar.c  wallpaper.c  xlock.c
src/modules/: Makefile.am  battery.c  clock.c  launcher.c  mixer.c  mountd.c  sensor.c  showdesktop.c  splash.c
src/programs/: Makefile.am  desktop.c  gcontrol.h  gdisplay.c  gdisplay.h  gpanel.c  gpanel.h  grdesktop.c  grdesktop.h  gsession  gsession.c  gsession.sh  gsnapshot.c  gsnapshot.h  prova.c  setting.c  wallpaper.c
src/scripts/: email  gdesktop  gpassword  mediaplayer  pdfview  showaudio  spreadsheet  terminal  uninstall.pl  updates  webcam  webrowser  wireless
src/system/: Makefile.am  genesis.c  genesis.h  genesis.jnlp  gpackage.c  installer.c  interface.c  interface.h  navigation.c  package.c  package.h
src/sysvinit/scripts/: acpi-events-default  consoletype
src/xdm/: Makefile.am  gould.c  gould.h  greeter.c  interface.c  lang.c  lang.h  util.c  util.h
src/xdm/gdm/: gdm-languages.c
